// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trusted_app_card TrustedAppCard should render correctly 1`] = `
<ItemDetailsCard>
  <ItemPropertySummary
    name="Name"
    value="trusted app 4"
  />
  <ItemPropertySummary
    name="OS"
    value="Mac OS"
  />
  <ItemPropertySummary
    name="Date Created"
    value={
      <Memo(FormattedDate)
        className="eui-textTruncate"
        fieldName="Date Created"
        value="1 minute ago"
      />
    }
  />
  <ItemPropertySummary
    name="Created By"
    value="someone"
  />
  <ItemPropertySummary
    name="Description"
    title="Trusted App 4"
    value="Trusted App 4"
  />
  <ConditionsTable
    badge="and"
    columns={
      Array [
        Object {
          "field": "field",
          "name": "Field",
          "sortable": false,
          "textOnly": true,
          "truncateText": true,
          "width": "30%",
        },
        Object {
          "field": "operator",
          "name": "Operator",
          "sortable": false,
          "truncateText": true,
          "width": "20%",
        },
        Object {
          "field": "value",
          "name": "Value",
          "sortable": false,
          "truncateText": true,
          "width": "60%",
        },
      ]
    }
    items={Array []}
    responsive={true}
  />
  <ItemDetailsAction
    color="danger"
    onClick={[Function]}
    size="s"
  >
    Remove
  </ItemDetailsAction>
</ItemDetailsCard>
`;

exports[`trusted_app_card TrustedAppCard should trim long descriptions 1`] = `
<ItemDetailsCard>
  <ItemPropertySummary
    name="Name"
    value="trusted app 4"
  />
  <ItemPropertySummary
    name="OS"
    value="Mac OS"
  />
  <ItemPropertySummary
    name="Date Created"
    value={
      <Memo(FormattedDate)
        className="eui-textTruncate"
        fieldName="Date Created"
        value="1 minute ago"
      />
    }
  />
  <ItemPropertySummary
    name="Created By"
    value="someone"
  />
  <ItemPropertySummary
    name="Description"
    title="item0 item1 item2 item3 item4 item5 item6 item7 item8 item9 item10 item11 item12 item13 item14 item15 item16 item17 item18 item19 item20 item21 item22 item23 item24 item25 item26 item27 item28 item29 item30 item31 item32 item33 item34 item35 item36 item37 item38 item39"
    value="item0 item1 item2 item3 item4 item5 item6 item7 item8 item9 item10 item11 item12 item13 item14 item1..."
  />
  <ConditionsTable
    badge="and"
    columns={
      Array [
        Object {
          "field": "field",
          "name": "Field",
          "sortable": false,
          "textOnly": true,
          "truncateText": true,
          "width": "30%",
        },
        Object {
          "field": "operator",
          "name": "Operator",
          "sortable": false,
          "truncateText": true,
          "width": "20%",
        },
        Object {
          "field": "value",
          "name": "Value",
          "sortable": false,
          "truncateText": true,
          "width": "60%",
        },
      ]
    }
    items={Array []}
    responsive={true}
  />
  <ItemDetailsAction
    color="danger"
    onClick={[Function]}
    size="s"
  >
    Remove
  </ItemDetailsAction>
</ItemDetailsCard>
`;
